@@ -144,7 +144,8 @@ PEOPE WHO MADE LANGUAGE FILES
 - VB.NET                 Alan Juden
 - Verilog                Günter Dannoritzer
 - VIM Script             Swaroop C H
-- VisualFoxPro           Roberto Armellin
+- Visual FoxPro          Roberto Armellin
+- Visual Prolog          Thomas Linder Puls
 - Whitespace             Benny Baumann
 - Winbatch               Craig Storey
 - X++                    Simon Butcher
